# MonoWrapper

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
CMake/: CopyToRuntimePath.cmake  FindMono.cmake  Mono.cmake
MonoWrapper/: Activator.h  AppDomain.cpp  AppDomain.h  Assembly.cpp  Assembly.h  FieldInfo.cpp  FieldInfo.h  FieldInvoker.h  JIT.cpp  JIT.h  MemberInfo.cpp  MemberInfo.h  MethodInfo.cpp  MethodInfo.h  MethodInternal.h  MethodInvoker.h  Mono.h  NonOwningPtr.h  Object.cpp  Object.h  PropertyInfo.cpp  PropertyInfo.h  StringHelper.cpp  StringHelper.h  Thread.cpp  Thread.h  Type.cpp  Type.h  TypeConversion.h
MonoWrapper/Exceptions/: AccessViolationException.h  FileLoadException.h  FileNotFoundException.h  JITException.h  MissingAttributeException.h  MissingMethodException.h  MissingTypeMemberException.h  MonoException.h  TargetInvocationException.h  ThunkException.h  TypeLoadException.h
MonoWrapper/Experimental/: Array.cpp  Array.h
